EndPoint tous les niveaux accessibles et leurs diplomes
